# model_predictive_control

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  fix_imports.py  fix_tests.py  patch_constraints_iterable.py  patch_imports.py  patch_ocp.txt  patch_ocp2.txt  patch_tests_ocp_clean.py  pyproject.toml  requirements.txt  test_ocp_fix.py  update_ocp.py
_l4c_generated/: adj1_l4casadi_f.pt  jac_adj1_l4casadi_f.pt  jac_l4casadi_f.pt  l4casadi_f.cpp  l4casadi_f.pt
benchmarks/: test_linear.py  test_linear_mpc.py  test_linear_raw.py  test_nonlinear.py  test_nonlinear_ocp.py  test_nonlinear_raw.py
examples/: inverted_pendulum.ipynb  inverted_pendulum.py  inverted_pendulum_ocp.ipynb  learned_inverted_pendulum.ipynb  learned_inverted_pendulum.py  learning_mpc_example.ipynb  learning_mpc_example.py  linear_mpc.ipynb  linear_mpc.py  quadrotor_mpc.ipynb  quadrotor_mpc.py  quadrotor_tracking.ipynb  quadrotor_tracking.py  stochastic_mpc.ipynb  stochastic_mpc.py
examples/_l4c_generated/: adj1_l4casadi_f.pt  jac_adj1_l4casadi_f.pt  jac_l4casadi_f.pt  l4casadi_f.cpp  l4casadi_f.pt
src/learning/: __init__.py  constraints.py  dynamics.py  objective.py
src/model_predictive_control/: __init__.py  constraints.py  controller.py  dynamics.py  mpc.py  objective.py  ocp.py  ocp.py.orig  plots.py  simulation.py
tests/: test_components.py  test_constraints.py  test_learning.py  test_linear_mpc.py  test_linear_ocp.py  test_mpc.py  test_objective.py  test_ocp.py  test_simulation.py  test_terminal_constraint.py  test_tracking.py
