
[project]
name = "model-predictive-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Max Frankenberg", email = "frankenbergmax57@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "casadi>=3.7.2",
    "marimo>=0.23.13",
    "matplotlib>=3.10.8",
    "ninja>=1.11",
    "numpy>=2.4.3",
    "pandas>=3.0.2",
    "scikit-build>=0.17",
    "scipy>=1.17.1",
    "scipy-stubs>=1.17.1.3",
    "setuptools>=68.1",
    "simulate",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0", # Added for coverage reporting
    "ruff>=0.3.0",
    "pre-commit>=3.0.0",
    "validate-pyproject>=0.23",
    "pytest-benchmark>=5.2.3",
    "pandas-stubs>=3.0.0.260204",
    "osqp>=1.1.3",
    "ty>=0.0.56",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
simulate = { git = "https://github.com/maxi-fr/simulate" }

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "FIX",    # for comments like TODO, FIXME
    "TD",     # for structure of TODO comments
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "ANN101", # Missing type annotation for self (deprecated in modern Ruff)
    "COM812", # Trailing comma missing (conflicts with formatter)
    "ISC001", # Single line implicit string concatenation (conflicts with formatter)
    "N806",   # lowercase variables
    "N803",   # lowercase arguments
    "ERA001", # commented out code
    "PLR2004",# magic value in comparison
    "FBT001", # boolean arg in function
    "FBT002", # boolean arg in function
    "S101",   # assert detected
]

[tool.ruff.lint.isort]
known-first-party = ["model_predictive_control"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR0913", # too-many-arguments
    "F401",    # unused import
    "ARG001",  # Unused function args (fixtures)
    "PLR2004", # Magic value used in comparison
    "D",       # Ignore docstrings in tests
    "SLF001",  # Private member accessed
    "PT011",   # pytest.raises too broad
    "ANN",     # type annotations
    "E741",    # ambiguous variable name
    "PLR0915", # too many statements
]
"benchmarks/*" = [
    "PLR0913",
    "F401",
    "ARG001",
    "PLR2004",
    "D",
    "SLF001",
    "PT011",
    "ANN",
    "E741",
    "PLR0915",
]
"examples/*" = [
    "INP001",   # No __init__.py in examples folder
    "ANN001",   # missing type annotation for cell args (marimo passes refs untyped)
    "ANN202",   # missing return type for cell `_` functions
    "PLC0415",  # imports inside cells (marimo idiom)
    "B018",     # last expression renders the cell output (e.g. `fig`)
    "PLR1711",  # useless return statements (marimo adds them; not all cells need return)
    "ICN001",   # marimo requires private imports like _pd/_plt to avoid cell namespace clashes
    "N803",     # marimo cell arguments can be CamelCase class names
    "PLR0913",  # too many arguments in cell function definitions
    "E741",     #
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
# Usually, keeping the comma helps with cleaner diffs in git
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
# Added -v for more detail and --cov to integrate coverage
addopts = "-ra -q -v --cov={{cookiecutter.project_slug}}"
testpaths = ["tests"]

[tool.ty.src]
exclude = ["examples/*"]  # For marimo notebooks

[tool.ty.rules]
# In ty, you control strictness by setting individual rules to "error", "warn", or "ignore".

invalid-assignment = "error"         # Assigning an incompatible type to a variable
invalid-argument-type = "error"      # Passing the wrong type to a function
invalid-return-type = "error"        # Returning a value that doesn't match the function's return annotation
unresolved-import = "error"          # Importing a module that cannot be found
unresolved-attribute = "error"       # Accessing an attribute that doesn't exist on that object type
unresolved-reference = "error"       # Using an undefined variable or name

possibly-missing-import = "error"    # Strict import resolution
unused-ignore-comment = "warn"       # Flagging a '# ty: ignore' comment that isn't doing anything
unused-type-ignore-comment = "warn"  # Flagging a standard '# type: ignore' that isn't doing anything
ignore-comment-unknown-rule = "warn" # Warns you if you try to ignore a rule that doesn't exist

index-out-of-bounds = "error"        # Static bounds checking on indexable collections (like tuples)
division-by-zero = "error"           # Catching literal division by zero statically
not-iterable = "error"               # Trying to use a non-iterable object in a loop
not-subscriptable = "error"          # Trying to index an object that doesn't support it

[[tool.ty.overrides]]
include = ["examples/[0-9]*.py"]
rules = { unresolved-reference = "ignore" }
